<resources>
    <string name="app_name">Gasto Viagem</string>
    <string name="total_de_quilometros">Total de quilômetros</string>
    <string name="preco">Preço</string>
    <string name="preco_por_litro">Preço por litro</string>
    <string name="distancia">Distância</string>
    <string name="autonomia">Autonomia</string>
    <string name="km_por_litro">KM por litro</string>
    <string name="gasto_total">Seu gasto total será de:</string>
    <string name="valor_total">R$0:</string>
    <string name="calcular">Calcular</string>

    <string name="validation">Preencha todos os campos.</string>
    <string name="gasto_viagem">Gasto Viagem</string>
</resources>